게시판기능수정, 알림버그픽스,등등